--- a/client/styles.css
+++ b/client/styles.css
@@ -85,8 +85,8 @@ body {
 
 
 input{
-    -webkit-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    -webkit-border-radius: 7px !important; */
+    border-radius: 7px !important;
     margin-bottom: 3px !important;
     margin-top: 3px !important;
     /* -moz-border-radius: 50px !important; */
@@ -123,7 +123,7 @@ input.username_search{
 .button, .segment, .label{
     /* -webkit-border-radius: 10px !important; */
     /* -moz-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    border-radius: 8px !important;
 }
 
 
@@ -212,8 +212,8 @@ input.username_search{
     font-family: 'Ubuntu', sans-serif !important;
 }
 h1.ui.header{
-    /* font-family: 'Ubuntu', sans-serif !important; */
-    font-family: 'Lusitana', serif !important;
+    font-family: 'Ubuntu', sans-serif !important;
+    /* font-family: 'Lusitana', serif !important; */
     /* font-size: 300% !important; */
     color: #5a4400 !important;
 
