--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .six.wide.column
+                .four.wide.column
                     .ui.inline.header
                         //- i.icon(class=icon)
                         +i name=icon
@@ -47,14 +47,15 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .ten.wide.column
+                .twelve.wide.column
                     //- .ui.inline.header
                     //-     |sort by
                     //- .ui.button
                     //- .ui.stackable.four.column.grid
-                    each current_delta.result_ids
-                        //- .column
-                        +delta_result
+                    .ui.four.cards
+                        each current_delta.result_ids
+                            //- .column
+                            +delta_result
                 
 
 
@@ -73,10 +74,10 @@ template(name='facet')
                 |#{key}
                 //- i.dropdown.icon
             //- .active.content
-        //- if is_admin
-        .ui.icon.small.transparent.input
-            i.search.icon
-            input.add_filter(type='text')
+        if is_admin
+            .ui.icon.small.transparent.input
+                i.search.icon
+                input.add_filter(type='text')
         //- div
         each filtering_res
             if name
@@ -107,29 +108,30 @@ template(name='delta_result')
         if template_exists
             +Template.dynamic template=model_template
         else
-            .ui.result.cloud.segment(class=loading_class)
-                each fields
-                    +Template.dynamic template=view_template 
-                .extra
-                    if is_model
-                        +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                        a.ui.basic.button.route_model(href="/m/#{slug}")
-                            i.sitemap.icon
-                            |view model
-                        if is_admin
-                            a.ui.basic.button.route_model(href="/model/edit/#{_id}")
-                                i.edit.icon
-                                |edit model
-                    else
-                        if can_edit
-                            a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
-                                i.pencil.large.icon
-                                //- |edit
-                        a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
-                            i.right.chevron.large.icon
-                    if _author_id
-                        +author_info
-                    +creation_info
-                        
-            
+            .ui.result.cloud.card(class=loading_class)
+                .content
+                    each fields
+                        +Template.dynamic template=view_template 
+                    .extra
+                        if is_model
+                            +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                            a.ui.basic.button.route_model(href="/m/#{slug}")
+                                i.sitemap.icon
+                                |view model
+                            if is_admin
+                                a.ui.basic.button.route_model(href="/model/edit/#{_id}")
+                                    i.edit.icon
+                                    |edit model
+                        else
+                            if can_edit
+                                a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                                    i.pencil.large.icon
+                                    //- |edit
+                            a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                                i.right.chevron.large.icon
+                        if _author_id
+                            +author_info
+                        +creation_info
+                            
+                
                         
